--- a/src/my_first_package_msgs/package.xml
+++ b/src/my_first_package_msgs/package.xml
@@ -16,7 +16,7 @@
   <exec_depend>rosidl_default_runtime</exec_depend>
   <member_of_group>rosidl_interface_packages</member_of_group>
 
-  <depend>action_mesgs</depend>
+  <depend>action_msgs</depend>
 
   <export>
     <build_type>ament_cmake</build_type>
